--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@types/react": "^16.8.14",
+    "@types/react-dom": "^16.8.4",
+    "isomorphic-ws": "^4.0.1",
+    "jsdoc": "^3.5.5",
+    "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "ws": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +37,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.9.1",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.7",
+    "@types/react-router-dom": "^4.3.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "react-test-renderer": "^16.8.6",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.4.5"
   }
 }
