--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
+    "dotenv": "^8.0.0",
     "isomorphic-ws": "^4.0.1",
     "jsdoc": "^3.5.5",
     "node-sass": "^4.12.0",
@@ -43,6 +44,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.7",
     "@types/react-router-dom": "^4.3.2",
+    "@types/ws": "^6.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
